--- a/xrefmap.yml
+++ b/xrefmap.yml
@@ -25,8 +25,11 @@ references:
 - uid: edgeSystemHealth
   name: Edge System health
   href: Beta2/Health/Health.html
+- uid: edgeSystemLogging
+  name: Edge System Logging
+  href: Beta2/Administration/LoggingConfiguration.html
 - uid: edgeSystemOverview
-  name: Edge System Overview
+  name: Edge System overview
   href: Beta2/Overview/EdgeSystemOverview.html
 - uid: egress
   name: Egress from Edge System
@@ -62,10 +65,10 @@ references:
   name: Edge Modbus Quick Start
   href: Beta2/Overview/ModbusQuickStart.html
 - uid: ocsEgressQuickStart
-  name: OSIsoft Cloud Services (OCS) Egress Quick Start
+  name: OSIsoft Cloud Services (OCS) egress Quick Start
   href: Beta2/Overview/OCSEgressQuickStart.html
 - uid: omfOverview
-  name: OSIsoft Message Format (OMF) Ingress with Edge Storage
+  name: OSIsoft Message Format (OMF) ingress with Edge Storage
   href: Beta2/OMF/OMFOverview.html
 - uid: omfQuickStart
   name: Edge Storage OMF Quick Start
@@ -89,10 +92,10 @@ references:
   name: Generating a template OPC UA data selection configuration file on Windows
   href: Beta2/OpcUa/OpcUaDataSelectionWindows.html
 - uid: opcUaOverview
-  name: OPC UA Connectivity
+  name: OPC UA connectivity
   href: Beta2/OpcUa/OpcUaOverview.html
 - uid: opcUaQuickStart
-  name: Edge Opc Ua Quick Start
+  name: Edge OPC UA quick start
   href: Beta2/Overview/OpcUaQuickStart.html
 - uid: piEgressQuickStart
   name: PI System (PI Web API) Egress Quick Start
@@ -143,7 +146,7 @@ references:
   name: Types
   href: Beta2/SDS/SDS_Types.html
 - uid: sdsWritingData
-  name: Writing data
+  name: Write data
   href: Beta2/SDS/Writing_Data.html
 - uid: sdsWritingDataApi
   name: API calls for writing data
@@ -185,5 +188,5 @@ references:
   name: Edge System troubleshooting
   href: Beta2/Troubleshooting/Troubleshooting.html
 - uid: unitsOfMeasure
-  name: Units of Measure
+  name: Units of measure
   href: Beta2/SDS/Units_of_Measure.html
