--- a/V1/SDS/toc.yml
+++ b/V1/SDS/toc.yml
@@ -14,7 +14,7 @@
   href: read-data/toc.yml
   topicHref: read-data.md
 - name: Write data
-  href: write/toc.yml
+  href: write-data/toc.yml
   topicHref: write-data.md
 - name: Units of measure
   href: uom/toc.yml
