updating modbus toc to point at subtree data selection topic

--- a/content/modbus/toc.yml
+++ b/content/modbus/toc.yml
@@ -5,4 +5,4 @@
 - name: Data source configuration
   topicUid: ModbusTCPDataSourceConfiguration
 - name: Data selection configuration
-  href: modbus-data-selection-configuration.md
+  topicUid: ModbusTCPDataSelectionConfiguration
