updating opc ua toc with history recovery

--- a/content/opc-ua/toc.yml
+++ b/content/opc-ua/toc.yml
@@ -4,6 +4,11 @@
   href: supported-features-opc-ua.md
 - name: Data source configuration
   topicUid: OPCUADataSourceConfiguration
+  items:
+  - topicUid: HistoryRecovery
+    items: 
+    - topicUid: OnDemandHistoryRecoveryConfiguration
+    - topicUid: AutomaticHistoryRecovery  
 - name: Adapter security
   href: opc-ua-adapter-security-configuration.md
 - name: Data selection configuration
