adding topics to toc

--- a/content/modbus/toc.yml
+++ b/content/modbus/toc.yml
@@ -6,3 +6,6 @@
   topicUid: ModbusTCPDataSourceConfiguration
 - name: Data selection configuration
   topicUid: ModbusTCPDataSelectionConfiguration
+  items: 
+  - topicUid: DataFiltersConfiguration
+  - topicUid: SchedulesConfiguration
