adding back data filters

--- a/content/toc.yml
+++ b/content/toc.yml
@@ -42,6 +42,8 @@
       - topicUid: SupportedFeaturesModbus
       - topicUid: ModbusTCPDataSourceConfiguration
       - topicUid: ModbusTCPDataSelectionConfiguration
+        items:
+        - topicUid: DataFiltersConfiguration
     - topicUid: omfOverview
       items:
       - topicUid: OMFMessages
