adding data filters for OPC UA

--- a/content/toc.yml
+++ b/content/toc.yml
@@ -36,6 +36,8 @@
       - topicUid: OPCUADataSourceConfiguration
       - topicUid: OPCUAAdapterSecurityConfiguration
       - topicUid: OPCUADataSelectionConfiguration
+        items:
+        - topicUid: DataFiltersConfiguration
     - topicUid: modbusOverview
       items:
       - topicUid: PrinciplesOfOperationModbus
