adding filters doc

--- a/content/toc.yml
+++ b/content/toc.yml
@@ -46,6 +46,7 @@
       - topicUid: ModbusTCPDataSelectionConfiguration
         items:
         - topicUid: DataFiltersConfiguration
+        - topicUid: SchedulesConfiguration
     - topicUid: omfOverview
       items:
       - topicUid: OMFMessages
