Squashed 'content/modbus/shared-content/' changes from 483d3ceb..937a5614
937a5614 Merge pull request #39 from osisoft/306192_KN0427
fcb1a28e Update content/configuration/security.md
75a6ae4e Update content/configuration/security.md
27170eea Update TOC to add new topic
fffda9ef Create new Security topic
8b3d244e Merge pull request #37 from osisoft/298575M_KN
509b3643 Updated to add Network Proxy

git-subtree-dir: content/modbus/shared-content
git-subtree-split: 937a5614097613ab2c18bd664cf75df5dfbfa45c

--- a/content/toc.yml
+++ b/content/toc.yml
@@ -11,6 +11,7 @@
   - topicUid: UninstallTheAdapter
 - topicUid: ModbusConfiguration
   items:
+  - topicUid: PIAdapterForModbusSecurity
   - topicUid: ConfigurationTools
   - topicUid: PIAdapterForModbusTCPSystemComponentsConfiguration
     items:
@@ -19,14 +20,15 @@
   - topicUid: SchedulesConfiguration
   - topicUid: PIAdapterForModbusTCPDataSelectionConfiguration
   - topicUid: DataFiltersConfiguration
+  - topicUid: EgressEndpointsConfiguration
+    items:
+    - topicUid: PrepareEgressDestinations
+    - topicUid: ConfigureANetworkProxy
   - topicUid: GeneralConfiguration
     items:
     - topicUid: AdapterMetadata
   - topicUid: BufferingConfiguration
   - topicUid: LoggingConfiguration
-  - topicUid: EgressEndpointsConfiguration
-    items:
-    - topicUid: PrepareEgressDestinations 
   - topicUid: HealthEndpointConfiguration
   - topicUid: PIAdapterForModbusTCPConfigurationExamples
 - topicUid: Administration
