Added upgrade section and placeholder files

--- a/content/toc.yml
+++ b/content/toc.yml
@@ -11,6 +11,9 @@
   - topicUid: sdsQuickStart
   - topicUid: commandLineLinuxQuickStart
   - topicUid: commandLineWindowsQuickStart
+- topicUid: Upgrade
+  items:
+  - topicUid: UpgradeFrom40
 - topicUid: InstallEdgeDataStore
   items:
     - topicUid: SystemRequirements
