on-demand egress

--- a/content/toc.yml
+++ b/content/toc.yml
@@ -58,6 +58,7 @@
     - topicUid: PrepareEgressDestinations
     - topicUid: configureEgress
     - topicUid: EgressExecutionDetails
+    - topicUid: ondemandEgress
     - topicUid: EdgeDataStoreDiagnostics
   - topicUid: EdgeDataStoreHealth
     items:
