--- a/content/toc.yml
+++ b/content/toc.yml
@@ -2,16 +2,6 @@
   items:
   - topicUid: scalePerformance
   - topicUid: security
-- topicUid: QuickStartGuides
-  items:
-  - topicUid: opcUaQuickStart
-  - topicUid: modbusQuickStart
-  - topicUid: omfQuickStart
-  - topicUid: adhEgressQuickStart
-  - topicUid: piEgressQuickStart
-  - topicUid: sdsQuickStart
-  - topicUid: commandLineLinuxQuickStart
-  - topicUid: commandLineWindowsQuickStart
 - topicUid: InstallEdgeDataStore
   items:
     - topicUid: SystemRequirements
@@ -27,6 +17,8 @@
     items:
     - topicUid: SystemComponentsConfiguration
     - topicUid: SystemPortConfiguration
+    - topicUid: GeneralConfiguration
+    - topicUid: BufferingConfiguration
     - topicUid: EdgeDataStoreConfiguration
   - topicUid: EDSDataIngress
     items:
