--- a/xrefmap.yml
+++ b/xrefmap.yml
@@ -271,9 +271,12 @@ references:
 - uid: Reference
   name: Reference
   href: z-archive/Reference/Reference_1-0.html
-- uid: releaseNotes
+- uid: ReleaseNotesEDS
   name: Edge Data Store 2023 release notes
-  href: content/release-notes/release-notes.html
+  href: content/release-notes/release-notes-eds.html
+- uid: ReleaseNotesEDSModule
+  name: Edge Data Store 2023 (Module) release notes
+  href: content/release-notes/release-notes-eds-module.html
 - uid: ResetEdgeDataStore
   name: Reset Edge Data Store
   href: content/administration/reset-edge-data-store.html
