Build Agent Modified DocFX Site

--- a/xrefmap.yml
+++ b/xrefmap.yml
@@ -272,7 +272,7 @@ references:
   name: Reference
   href: z-archive/Reference/Reference_1-0.html
 - uid: ReleaseNotesEDS
-  name: Edge Data Store 2023 release notes
+  name: Edge Data Store 2023 Patch 1 release notes
   href: content/release-notes/release-notes-eds.html
 - uid: ReleaseNotesEDSModule
   name: Edge Data Store 2023 (Module) release notes
